# energietools

./: .dockerignore  .gitignore  CREDITS.md  LICENSE  METHODIK.md  NETZKOSTEN_UND_GEBUEHREN.md  README.md  TODO.md  pyproject.toml
.github/workflows/: demos.yml
apps/simba/: .env.example  .gitignore  DEPLOY.md  README.md  build.sh  docker-compose.yml  fly.toml  render.yaml
apps/simba/backend/: Dockerfile  requirements.txt
demos/: README.md  build_site.py  netzkosten.py  rechnung.py  speicher.py  spot.py
energietools/: __init__.py  __main__.py  cost.py
energietools/agent/: __init__.py  capability_tools.py  loop.py  registry.py  types.py
energietools/capabilities/: __init__.py  base.py  profile.py  registry.py  tools_bridge.py
energietools/capabilities/community/: __init__.py  capability.py  metrics.py
energietools/capabilities/finance/: __init__.py  calculations.py  capability.py  models.py
energietools/capabilities/grid_fees/: __init__.py  capability.py  resolve.py
energietools/capabilities/heatpump/: __init__.py  capability.py
energietools/capabilities/invoice/: __init__.py  capability.py  facts.py
energietools/capabilities/knowledge/: capability.py  pages.py
energietools/capabilities/lastgang/: __init__.py  attribution.py  attribution_capability.py  attribution_models.py  capability.py  granularitaet.py  guards.py  models.py  reconcile.py  signals.py  spot.py  trend.py
energietools/capabilities/load_profile/: __init__.py  capability.py
energietools/capabilities/netz/: __init__.py  capability.py  data.py  models.py  per_kwh.py  per_kwh_capability.py  resolve.py
energietools/capabilities/providers/: __init__.py  abdeckung.py  capability.py
energietools/capabilities/scenarios/: __init__.py  capability.py  dispatch.py  peak_shaving.py
energietools/capabilities/spot/: __init__.py  data.py
energietools/capabilities/tariff_compare/: __init__.py  capability.py  compare.py  protocols.py  sources.py
energietools/capabilities/tariffs/: __init__.py  advice.py  capability.py  catalog.py  compare.py  models.py
energietools/components/: __init__.py  base.py  battery.py  ev.py  gas_boiler.py  heatpump.py  pv.py
energietools/data/: __init__.py
energietools/data/netz/: MANIFEST.json  __init__.py  abgaben.json  netzkosten.json  plz_netzbereich.json  vnb_attribution.json
energietools/data/providers/: MANIFEST.json  __init__.py  anbieter.json  lieferanten.json
energietools/data/spot/: MANIFEST.json  __init__.py  epex_at.json
energietools/data/tariffs/: MANIFEST.json  __init__.py  catalog.json
energietools/llm/: __init__.py  claude_provider.py  mistral_provider.py  openai_provider.py  types.py
energietools/models/: __init__.py  battery.py  beg.py  energy_news.py  gas.py  invoice.py  load_profile.py  pv.py  report.py  smart_meter.py  spot.py  tariff.py
energietools/optimizer/: __init__.py  optimizer.py
energietools/prozesse/: MANIFEST.json  __init__.py  beispiel_check.py  caveats.py  erstkontakt.yaml  external_tools.py  lastganganalyse.yaml  linter.py  loader.py  models.py  rechnungsanalyse.yaml  renderer.py
energietools/prozesse/beispiele/: erstkontakt_was_kann_gridbert.json  (+4 more)
energietools/system/: __init__.py  system.py
energietools/tools/: __init__.py  battery_sim.py  beg_advisor.py  cost_engine.py  energy_monitor.py  file_utils.py  gas_compare.py  h0_profile.py  invoice_parser.py  llm_protocol.py  load_builder.py  load_profile.py  pv_sim.py  regelenergie.py  smartmeter.py  spot_analysis.py  spot_pricing.py  switching.py  tariff_compare.py  web_search.py  zaehlpunkt.py
energietools/wiki/: glossar.md  index.md  llms.txt  stromkosten-zusammensetzung.md
examples/: agent_standalone.py  tariff_check.py
skills/: _instructions_kurzform.md
skills/gridbert-erstkontakt/: SKILL.md
skills/gridbert-lastganganalyse/: SKILL.md
skills/gridbert-rechnungsanalyse/: SKILL.md
tests/: test_agent_loop.py  test_baukasten.py  test_capabilities.py  test_capabilities_phase2.py  test_contract_gb_parity.py  test_contract_spot_parity.py  test_contract_szenario_parity.py  test_cost_engine.py  test_cost_szenario.py  test_finance.py  test_gebrauchsabgabe_basisgenau.py  test_get_knowledge.py  test_grid_fees.py  test_h0_profile.py  test_heatpump_capability.py  test_invoice_deterministic.py  test_invoice_facts.py  test_invoice_merge.py  test_invoice_parser.py  test_invoice_provider_injection.py  test_lastgang_attribution.py  test_lastgang_capability.py  test_lastgang_reconcile.py  test_load_builder.py  test_load_profile.py  test_load_profile_capability.py  test_netz_capability.py  test_netz_per_kwh.py  test_profile_facts.py  test_providers_abdeckung.py  test_prozesse_beispiele.py  test_prozesse_linter.py  test_prozesse_models.py  test_prozesse_renderer.py  test_regelenergie.py  test_s6_legacy_cleanup.py  test_scenarios.py  test_scenarios_peak_shaving.py  test_scenarios_price_dispatch.py  test_serialization.py  (+6 more)
tests/fixtures/: epex_at_frozen.json
web/: .gitignore  astro.config.mjs  package-lock.json  package.json
web/src/: content.config.ts
web/src/lib/: et.js
wiki/: glossar.md  index.md  llms.txt
wiki/gas/: index.md
wiki/markt/: index.md
wiki/messung/: index.md
wiki/netz/: index.md
wiki/steuern/: index.md
wiki/tarife/: index.md
wiki/wirtschaftlichkeit/: index.md
(+44 files in other folders)
