[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energietools"
version = "0.1.0"
description = "Open-Source Toolkit für den österreichischen Energiemarkt"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
analysis = ["scikit-fda>=0.9", "matplotlib>=3.7", "entsoe-py>=0.6"]
pdf = ["pdfplumber>=0.11", "Pillow>=10.0", "fpdf2>=2.7"]
search = ["duckduckgo-search>=7.0"]
excel = ["openpyxl>=3.1"]
ollama = ["ollama>=0.4"]
all = [
    "anthropic>=0.40",
    "openai>=1.50",
    "scikit-fda>=0.9",
    "matplotlib>=3.7",
    "entsoe-py>=0.6",
    "pdfplumber>=0.11",
    "Pillow>=10.0",
    "fpdf2>=2.7",
    "duckduckgo-search>=7.0",
    "openpyxl>=3.1",
    "ollama>=0.4",
]
dev = ["pytest>=8.0", "ruff>=0.6"]
xml = ["defusedxml>=0.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["energietools*"]

[tool.setuptools.package-data]
energietools = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
