[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energietools"
version = "0.3.0"
description = "Open-Source Toolkit für den österreichischen Energiemarkt"
authors = [{ name = "Benjamin Mörzinger", email = "b.moerzinger@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "numpy>=1.24",
    "pandas>=2.0",
    "defusedxml>=0.7",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
# Kein LLM-Provider-Extra: energietools bündelt keinen LLM-Client. Fähigkeiten,
# die ein LLM brauchen (invoice_parser), bekommen einen Provider injiziert
# (Protokoll: energietools.tools.llm_protocol). Der konkrete Client lebt in der
# aufrufenden Anwendung (z.B. gridbert).
analysis = ["scikit-fda>=0.9", "matplotlib>=3.7", "entsoe-py>=0.6"]
pdf = ["pdfplumber>=0.11", "Pillow>=10.0", "fpdf2>=2.7"]
search = ["duckduckgo-search>=7.0"]
excel = ["openpyxl>=3.1"]
all = [
    "scikit-fda>=0.9",
    "matplotlib>=3.7",
    "entsoe-py>=0.6",
    "pdfplumber>=0.11",
    "Pillow>=10.0",
    "fpdf2>=2.7",
    "duckduckgo-search>=7.0",
    "openpyxl>=3.1",
]
dev = ["pytest>=8.0", "ruff>=0.6"]
xml = ["defusedxml>=0.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["energietools*"]

[tool.setuptools.package-data]
energietools = ["data/*.json", "data/tariffs/*.json", "data/netz/*.json", "data/providers/*.json", "data/spot/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
